# upi_fraud_hackathon

./: Dockerfile  README.md  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  upi_project_environment.py
server/: app.py  models.py  upi_project_environment.py
upi_project/: Dockerfile  README.md  __init__.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
upi_project/server/: __init__.py  app.py  upi_project_environment.py
