[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "upi-fraud-investigator"
version = "1.0.0"
description = "UPI Fraud Pattern Investigator — OpenEnv RL Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "openai>=1.51.0",
    "requests>=2.32.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
